[package]
name = "tauri-plugin-iap"
version = "0.0.1"
authors = ["wtto00"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde_json = "1.0.117"
swift-rs = "1.0.7"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"

[build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }
tauri-build = { version = "2.0.0-rc", features = [] }